--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.5.6",
     "express": "^4.14.0",
     "express-session": "^1.15.1",
+    "faker": "^3.1.0",
     "mongoose": "^4.7.4",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
