--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
