--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "passport-facebook": "^2.1.1",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
