re-styling with SCSS

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+	"build": "node-sass views/css/main.scss views/css/main.min.css --output-style compressed",
     "start": "node server.js",
     "test": "mocha"
   },
@@ -32,6 +33,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "faker": "^3.1.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "node-sass": "^4.5.2"
   }
 }
