added Mailer function

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"build": "node-sass views/css/main.scss views/css/main.min.css --output-style compressed",
+    "build": "node-sass views/css/main.scss views/css/main.min.css --output-style compressed",
     "start": "node server.js",
     "test": "mocha"
   },
@@ -22,6 +22,7 @@
     "faker": "^3.1.0",
     "mongoose": "^4.7.4",
     "morgan": "^1.7.0",
+    "nodemailer": "^4.1.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-http": "^0.3.0",
